# ds-practice

./: .gitignore  CMakeLists.txt  Makefile  README  plan.md
apps/: Analytic.cpp  Analytic.h  BufferLedger.cpp  BufferLedger.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  Geometry.cpp  Geometry.h  MovementAnalyzer.cpp  MovementAnalyzer.h  Pipeline.cpp  Pipeline.h  PipelineCallback.cpp  PipelineCallback.h  ThreadPool.cpp  ThreadPool.h  deepstream_test2_app.c  main.cpp  main2.cpp
cmake/: FindNVDS.cmake
config/: dstest2_config.yml  dstest2_pgie_config.txt  dstest2_pgie_config.yml  dstest2_pgie_nvinferserver_config.txt  dstest2_sgie1_config.txt  dstest2_sgie1_config.yml  dstest2_sgie1_nvinferserver_config.txt  dstest2_sgie2_config.txt  dstest2_sgie2_config.yml  dstest2_sgie2_nvinferserver_config.txt  dstest3_config.yml  dstest3_pgie_config.yml
docker/: Dockerfile
docs/: algorithm.md  knowledge.md
scripts/: build-app.sh  build_devel_image.sh  run-app.sh  run-valgrind.sh  start_devel_container.sh
